fix(fantasy-loader): adjust loading text position for improved visibility

--- a/src/app/shared/ui/fantasy-loader/fantasy-loader.component.scss
+++ b/src/app/shared/ui/fantasy-loader/fantasy-loader.component.scss
@@ -795,6 +795,7 @@
   letter-spacing: 1px;
   text-align: center;
   position: relative;
+  top: 26px;
 
   .text-container {
     display: flex;
